[workspace]
members = [
    "eth_test_parser",
    "evm_test_runner",
    "common",
]

[profile.release]
lto = "fat"
codegen-units = 1

# TODO: Remove once `plonky_evm` gets a version on `crates.io`...
# Since we can only use `plonky2_evm` using a git revision (which also causes us to use `plonky2` with
# a reivison), any deps that also use `plonky2`/`plonky2_evm` are very often going to be using imcompatable
# revisions. We can solve this for now by using a `[patch]` section to force all deps to use a specific version,
[patch."https://github.com/mir-protocol/plonky2.git"]
plonky2_evm = { git = "https://github.com/mir-protocol/plonky2.git?rev=3de92d9ed1721cec133e4e1e1b3ec7facb756ccf" }
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git?rev=3de92d9ed1721cec133e4e1e1b3ec7facb756ccf" }

[patch.crates-io]
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git?rev=3de92d9ed1721cec133e4e1e1b3ec7facb756ccf" }
